Resolved button layout issue in the buttons container and applied styles for screens larger than 1024px to the cart content

--- a/main.css
+++ b/main.css
@@ -882,6 +882,7 @@ header {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
+  margin: 0 auto;
 }
 
 .product__subtitle {
@@ -931,9 +932,18 @@ header {
   font-weight: 600;
 }
 
+.buttons-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+  margin-top: 1.5rem;
+}
+
 .quantity-control {
   display: flex;
   align-items: center;
+  flex-grow: 0;
   background-color: var(--light-grayish-blue);
   color: var(--very-dark-blue);
   border: none;
@@ -960,6 +970,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-grow: 1;
   gap: 0.5rem;
   padding: 0.5rem;
 }
@@ -1273,7 +1284,7 @@ header {
     justify-content: flex-start;
     height: auto;
     position: relative;
-    font-size: var(--fs-desktop-small);
+    font-size: var(--fs-m);
     top: 1.25rem;
   }
 
@@ -1328,6 +1339,11 @@ header {
     margin-right: 2rem;
   }
 
+  .cart-content {
+    width: 50%;
+    left: 75%;
+  }
+
   .hero {
     margin-bottom: 3.5rem;
   }
@@ -1361,6 +1377,11 @@ header {
     flex-direction: column;
     align-items: flex-start;
     gap: 0.5rem;
+  }
+
+  .product__description,
+  .product__add-to-cart {
+    font-size: var(--fs-n);
   }
 
   /* Large Desktop media query */
